--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   </head>
   <body>
     <h1>Weather Forecast</h1>
-    <form>
+    <form id="enterZip">
       <input type="number" value="select" placeholder="enter zip" />
       <input type="submit" value="Get Weather by Zipcode" />
     </form>
-    <section>
+    <section id="content">
+      <h3 id="cityName"></h3>
         <ul id="forecast">
         </ul>
     </section>
