--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
   <body>
     <h1>Weather Forecast</h1>
     <form id="enterZip">
-      <input type="number" value="select" placeholder="enter zip" />
+      <input type="text" value="select" placeholder="enter zip" />
       <input type="submit" value="Get Weather by Zipcode" />
+    </form>
+    <p>or</p>
+    <form id="geoLocation">
+      <input type="submit" value="Find by my current location" />
     </form>
     <section id="content">
       <h3 id="cityName"></h3>
