--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       <h3 id="cityName"></h3>
         <ul id="forecast">
         </ul>
+
+      <img src="/img/logo.jpg" id="logo" />
     </section>
+    <script src="scripts/lodash.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
